# rafx

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-shared.bat  build.bat  build.sh  clean.sh  run.bat  run.sh
.github/: package_release.py
.github/workflows/: ci.yml
bindings/: gen.py  gen_all.bat  gen_jai.py  gen_odin.py
bindings/rafx-jai/: rafx.jai
bindings/rafx-odin/: rafx.odin
bindings/rafx-rs/src/: lib.rs
examples/: async_compute.cc  bloom.cc  compute_boids.cc  compute_triangle.cc  compute_voronoi.cc  cube.cc  denoise.cc  hot_reloading.cc  hot_reloading.slang  low_latency.cc  mesh_triangle.cc  rafx.slang  rt_boxes.cc  rt_triangle.cc  texcube.cc  triangle.c  triangle.cc  upscaler.cc
include/: rafx.h  rafx_internal.h
src/: core.cc  graphics.cc  window_glfw.cc  window_rgfw.cc  window_sdl3.cc
